adapt to Featuretools v0.6.0 prerelease

--- a/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
+++ b/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'0.5.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4      False          435.0          2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,31 +264,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>We can define the `pickup_latlong` to be a `TripStart` type which will be built on our `LatLong` type. This is a way to tell DFS that certain primitives are only important in one direction, from the beginning of a trip to the end. \n",
-    "\n",
-    "Marking separate types for `TripStart` and `TripEnd` can be skipped as of Featuretools version 0.1.17 with the `commutative` functionality in DFS.</p>"
+    "We can define the `pickup_latlong` to be a `LatLong` type. This is a way to tell DFS that certain primitives are only important in one direction, from the beginning of a trip to the end. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from featuretools import variable_types as vtypes\n",
     "from featuretools.variable_types import LatLong\n",
-    "\n",
-    "class TripStart(LatLong):\n",
-    "    _dtype_repr = \"latlong\"\n",
-    "\n",
-    "class TripEnd(LatLong):\n",
-    "    _dtype_repr = \"latlong\"\n",
     "    \n",
     "trip_variable_types = {\n",
     "    'passenger_count': vtypes.Ordinal, \n",
     "    'vendor_id': vtypes.Categorical,\n",
-    "    'pickup_latlong': TripStart,\n",
-    "    'dropoff_latlong': TripEnd,\n",
+    "    'pickup_latlong': LatLong,\n",
+    "    'dropoff_latlong': LatLong,\n",
     "}\n",
     "\n",
     "es = ft.EntitySet(\"taxi\")\n",
@@ -314,14 +306,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Next, we can create primitives for our new `pickup_latlong` and `dropoff_latlong` which are of type `TripStart` and `TripEnd`. \n",
+    "Next, we can create primitives for our new `pickup_latlong` and `dropoff_latlong` which are of type `LatLong`. \n",
     "\n",
-    "The distance between two `LatLong` types is most accurately represented by the Haversine distance: the nearest length along a sphere. We can also define the Cityblock distance (also called the taxicab metric), which takes into account that we can't move diagonally through buildings in Manhattan.</p>"
+    "The distance between two `LatLong` types is most accurately represented by the Haversine distance: the nearest length along a sphere. We can also define the Cityblock distance (also called the taxicab metric), which takes into account that we can't move diagonally through buildings in Manhattan."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,19 +356,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def latitude(latlong):\n",
-    "    return np.array([x[0] for x in latlong])\n",
-    "\n",
-    "def longitude(latlong):\n",
-    "    return np.array([x[1] for x in latlong])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,90 +364,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "Bearing = make_trans_primitive(function=bearing,\n",
-    "                               input_types=[TripStart, TripEnd],\n",
+    "                               input_types=[LatLong, LatLong],\n",
     "                               return_type=vtypes.Numeric)\n",
     "\n",
     "Cityblock = make_trans_primitive(function=cityblock,\n",
-    "                                 input_types=[TripStart, TripEnd],\n",
-    "                                 return_type=vtypes.Numeric)\n",
-    "\n",
-    "Haversine = make_trans_primitive(function=haversine,\n",
-    "                                 input_types=[TripStart, TripEnd],\n",
-    "                                 return_type=vtypes.Numeric)\n",
-    "\n",
-    "Latitude = make_trans_primitive(function=latitude, \n",
-    "                                input_types=[LatLong],\n",
-    "                                return_type=vtypes.Numeric)\n",
-    "\n",
-    "Longitude = make_trans_primitive(function=longitude,\n",
-    "                                 input_types=[LatLong],\n",
+    "                                 input_types=[LatLong, LatLong],\n",
     "                                 return_type=vtypes.Numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_rush_hour(datetime):\n",
+    "    hour = pd.DatetimeIndex(datetime).hour\n",
+    "    return (hour >= 7) & (hour <= 11)\n",
+    "\n",
+    "def is_noon_hour(datetime):\n",
+    "    hour = pd.DatetimeIndex(datetime).hour\n",
+    "    return (hour >= 11) & (hour <= 13)\n",
+    "\n",
+    "def is_night_hour(datetime):\n",
+    "    hour = pd.DatetimeIndex(datetime).hour\n",
+    "    return (hour >= 18) & (hour <= 23)\n",
+    "\n",
+    "RushHour = make_trans_primitive(function=is_rush_hour,\n",
+    "                                input_types=[vtypes.Datetime],\n",
+    "                                return_type = vtypes.Boolean)\n",
+    "    \n",
+    "NoonHour = make_trans_primitive(function=is_noon_hour,\n",
+    "                                input_types=[vtypes.Datetime],\n",
+    "                                return_type = vtypes.Boolean)\n",
+    "        \n",
+    "NightHour = make_trans_primitive(function=is_night_hour,\n",
+    "                                 input_types=[vtypes.Datetime],\n",
+    "                                 return_type = vtypes.Boolean)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The feature `Geobox` finds if a latlong is in a rectangle defined by two coordinate pairs. The feature `Numbox` is given here as a similar example."
+    "We have grouped together some times of day with `RushHour`, `NoonHour` and `NightHour`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rush_numbox(datetime, less=7, more=11):\n",
-    "    output = []\n",
-    "    number = pd.DatetimeIndex(datetime).hour\n",
-    "    for i, name in enumerate(number):\n",
-    "        if less<=number[i] and number[i]<=more:\n",
-    "            output.append(True)\n",
-    "        else: \n",
-    "            output.append(False)\n",
-    "    return output\n",
-    "\n",
-    "def noon_numbox(datetime, less=11, more=13):\n",
-    "    output = []\n",
-    "    number = pd.DatetimeIndex(datetime).hour\n",
-    "    for i, name in enumerate(number):\n",
-    "        if less<=number[i] and number[i]<=more:\n",
-    "            output.append(True)\n",
-    "        else: \n",
-    "            output.append(False)\n",
-    "    return output\n",
-    "\n",
-    "def night_numbox(datetime, less=18, more=23):\n",
-    "    output = []\n",
-    "    number = pd.DatetimeIndex(datetime).hour\n",
-    "    for i, name in enumerate(number):\n",
-    "        if less<=number[i] and number[i]<=more:\n",
-    "            output.append(True)\n",
-    "        else: \n",
-    "            output.append(False)\n",
-    "    return output\n",
-    "\n",
-    "RushHour = make_trans_primitive(function=rush_numbox,\n",
-    "                                input_types=[vtypes.Datetime],\n",
-    "                                return_type = vtypes.Boolean)\n",
-    "    \n",
-    "NoonHour = make_trans_primitive(function=noon_numbox,\n",
-    "                                input_types=[vtypes.Datetime],\n",
-    "                                return_type = vtypes.Boolean)\n",
-    "        \n",
-    "NightHour = make_trans_primitive(function=night_numbox,\n",
-    "                                 input_types=[vtypes.Datetime],\n",
-    "                                 return_type = vtypes.Boolean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have implemented a geographic box around JFK airport with the `GEOBOX` primitive. We can also group together some times of day with `NUMBOX`."
+    "The feature `Geobox` finds if a latlong is in a rectangle defined by two coordinate pairs."
    ]
   },
   {
@@ -530,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built 12 features\n"
+      "Built 16 features\n"
      ]
     },
     {
@@ -548,23 +497,28 @@
        " <Feature: trip_duration>,\n",
        " <Feature: passenger_count>,\n",
        " <Feature: vendor_id>,\n",
+       " <Feature: BEARING(dropoff_latlong, pickup_latlong)>,\n",
+       " <Feature: BEARING(pickup_latlong, dropoff_latlong)>,\n",
+       " <Feature: CITYBLOCK(dropoff_latlong, pickup_latlong)>,\n",
+       " <Feature: CITYBLOCK(pickup_latlong, dropoff_latlong)>,\n",
        " <Feature: GEOBOX(pickup_latlong, (40.62, -73.85), (40.7, -73.75))>,\n",
        " <Feature: GEOBOX(dropoff_latlong, (40.62, -73.85), (40.7, -73.75))>,\n",
        " <Feature: GEOBOX(pickup_latlong, (40.7, -73.97), (40.77, -73.9))>,\n",
        " <Feature: GEOBOX(dropoff_latlong, (40.7, -73.97), (40.77, -73.9))>,\n",
-       " <Feature: RUSH_NUMBOX(pickup_datetime)>,\n",
-       " <Feature: NOON_NUMBOX(pickup_datetime)>,\n",
-       " <Feature: NIGHT_NUMBOX(pickup_datetime)>]"
+       " <Feature: IS_RUSH_HOUR(pickup_datetime)>,\n",
+       " <Feature: IS_NOON_HOUR(pickup_datetime)>,\n",
+       " <Feature: IS_NIGHT_HOUR(pickup_datetime)>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "agg_primitives = []\n",
-    "trans_primitives = [GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
+    "trans_primitives = [Bearing, Cityblock,\n",
+    "                    GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
     "                    GeoBox(bottomleft=(40.70, -73.97), topright=(40.77, -73.9)),\n",
     "                    RushHour,\n",
     "                    NoonHour,\n",
@@ -598,15 +552,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built 73 features\n",
-      "Elapsed: 03:42 | Remaining: 10:39 | Progress:  27%|██▋       | Calculated: 3/11 chunks"
+      "Built 133 features\n",
+      "Elapsed: 02:24 | Remaining: 24:09 | Progress:   9%|▉         | Calculated: 1/11 chunks"
      ]
     },
     {
@@ -625,7 +579,7 @@
       "Traceback (most recent call last):\n",
       "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3267, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-20-c7ffbed467c3>\", line 22, in <module>\n",
+      "  File \"<ipython-input-11-8fb71859327c>\", line 22, in <module>\n",
       "    max_depth=4)\n",
       "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/synthesis/dfs.py\", line 200, in dfs\n",
       "    verbose=verbose)\n",
@@ -657,14 +611,8 @@
       "    lines, lnum = findsource(frame)\n",
       "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 179, in findsource\n",
       "    lines = linecache.getlines(file, globals_dict)\n",
-      "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/linecache.py\", line 47, in getlines\n",
-      "    return updatecache(filename, module_globals)\n",
-      "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/linecache.py\", line 136, in updatecache\n",
-      "    with tokenize.open(fullname) as fp:\n",
-      "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/tokenize.py\", line 456, in open\n",
-      "    text = TextIOWrapper(buffer, encoding, line_buffering=True)\n",
-      "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/bin/../lib/python3.6/codecs.py\", line 308, in __init__\n",
-      "    def __init__(self, errors='strict'):\n",
+      "  File \"/Users/lecrintech/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/linecache.py\", line 37, in getlines\n",
+      "    def getlines(filename, module_globals=None):\n",
       "KeyboardInterrupt\n"
      ]
     },
@@ -679,7 +627,8 @@
    ],
    "source": [
     "agg_primitives = ['Sum', 'Mean', 'Median', 'Std', 'Count', 'Min', 'Max', 'Num_Unique', 'Skew']\n",
-    "trans_primitives = [GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
+    "trans_primitives = [Bearing, Cityblock,\n",
+    "                    GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
     "                    GeoBox(bottomleft=(40.70, -73.97), topright=(40.77, -73.9)),\n",
     "                    RushHour,\n",
     "                    NoonHour,\n",
