Update NYC Taxi 2 - Baseline Solution.ipynb

--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -488,7 +488,7 @@
       "[210]\ttrain-rmse:0.405234\tvalid-rmse:0.417726\n",
       "[220]\ttrain-rmse:0.402503\tvalid-rmse:0.415351\n",
       "[226]\ttrain-rmse:0.401547\tvalid-rmse:0.41451\n",
-      "Modeling RMSLE 0.41451\n"
+      "Modeling RMSE 0.41451\n"
      ]
     }
    ],
