Update NYC Taxi 4 - Custom Featuretools Primitives.ipynb

--- a/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
+++ b/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
@@ -1068,7 +1068,7 @@
       "[210]\ttrain-rmse:0.363872\tvalid-rmse:0.377716\n",
       "[220]\ttrain-rmse:0.363538\tvalid-rmse:0.377674\n",
       "[226]\ttrain-rmse:0.363468\tvalid-rmse:0.377659\n",
-      "Modeling RMSLE 0.37766\n"
+      "Modeling RMSE 0.37766\n"
      ]
     }
    ],
@@ -1172,7 +1172,7 @@
     "<dd>&nbsp; &nbsp; Received a score of 0.39256 on the Kaggle competition.</dd>\n",
     "<dd>&nbsp; &nbsp; Placed 416 out of 1257.</dd>\n",
     "<dd>&nbsp; &nbsp; Beat 67% of competitors on the Kaggle competition.</dd>\n",
-    "<dd>&nbsp; &nbsp; Had a modeling RMSLE of 0.33454</dd>\n",
+    "<dd>&nbsp; &nbsp; Had a modeling RMSE of 0.33454</dd>\n",
     "</dl>\n",
     "\n",
     "December 27, 2017.\n",
