Update NYC Taxi 2 - Baseline Solution.ipynb

--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -639,7 +639,7 @@
     "<dd>&nbsp; &nbsp; Received a score of 0.46589 on the Kaggle competition.</dd>\n",
     "<dd>&nbsp; &nbsp; Placed 738 out of 1257.</dd>\n",
     "<dd>&nbsp; &nbsp; Beat 41% of competitors on the Kaggle competition.</dd>\n",
-    "<dd>&nbsp; &nbsp; Had a modeling RMSLE of 0.41591</dd>\n",
+    "<dd>&nbsp; &nbsp; Had a modeling RMSE of 0.41591</dd>\n",
     "\n",
     "December 27, 2017.\n",
     "\n",
